{
    "name": "playerInput",
    "maps": [
        {
            "name": "PlayerController",
            "id": "eaf6a0a0-489e-404e-baf7-089701b4866c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "635d6d45-4e8f-49d9-a673-c3bed7ed81a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "465dacb5-218d-4c8d-bc5c-44654fcc65bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c9a6642a-3a7d-4d5e-8787-133838fc493d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b7676b6c-10ba-4ed5-9145-bb70a6e17287",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f41c9486-9ff8-455d-83dc-9fe2b185f94d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "635e8b76-6fb8-4b5c-9386-7633a6ff4ea4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cc044d09-8f74-4a36-8139-03d984548a03",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8573ddd1-8528-441d-a575-a9fe75f018e2",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}